--- a/css/styles.css
+++ b/css/styles.css
@@ -3,6 +3,10 @@
   padding: 0;
 }
 
+html {
+  scroll-behavior: smooth;
+}
+
 article {
   font-size: 1.9rem;
   line-height: 1.6;
@@ -11,11 +15,7 @@ a {
   text-decoration: none;
   color: #ffffff;
 }
-#section-1-title,
-#section-2-title,
-#section-3-title {
-  font-size: 1.5rem;
-}
+
 .container {
   display: flexbox;
 }
@@ -33,13 +33,6 @@ a {
 
   text-decoration: none;
   gap: 3rem;
-}
-.nav-1 ul {
-  display: flex;
-  flex-direction: row;
-  justify-content: space-around;
-  gap: 1rem;
-  list-style: none;
 }
 
 .nav-2 ul {
@@ -68,6 +61,10 @@ a {
 }
 
 .section-3 {
+  margin: 1rem;
+  min-height: 100vh;
+}
+.section-4 {
   margin: 1rem;
   min-height: 100vh;
 }
